--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.7",
