--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.2",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.2"
   },
